Add  head and meta to file index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Inbound calculator</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="twitter:site" content="@mgregchi">
+<meta name="twitter:creator" content="@Mgregchi02">
+<meta name="twitter:title" content="Inbound calculator">
+<meta name="twitter:description" content="Inbound calculator: The results for <args> is: <results>">
+<meta name="twitter:image" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
+</head>
+<body></body>
+</html>
