Add site description to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Inbound calculator</title>
+<meta name="description" content="Inbound calculator: The results for <args> is: <results>">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="twitter:site" content="@mgregchi">
 <meta name="twitter:creator" content="@Mgregchi02">
